--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0-rc17",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
