Hopefully fixes failing deployment

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-react": "^8.0.0-rc17",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -38,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
