--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^0.2.0",
     "embla-carousel-autoplay": "^8.0.0-rc21",
     "embla-carousel-react": "^8.0.0-rc17",
+    "framer-motion": "^11.0.5",
     "google-fonts": "^1.0.0",
     "mongoose": "^8.1.0",
     "next": "^14.0.4",
